# note_service

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  justfile
.github/workflows/: ci.yml
migrations/: init.sql
src/: lib.rs  main.rs
src/app/: handlers.rs
src/domain/: note.rs
src/infra/: mod.rs  note_repo_pg.rs  note_repo_sqllite.rs
src/usecase/: mod.rs  note_use_case.rs
tests/: api.rs  usecase.rs
