[package]
name = "note_service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = {version = "1.13", features = ["attributes"] }
dotenvy = "0.15.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-async-std-native-tls"] }
tide = "0.16.0"

[dev-dependencies]
async-trait = "0.1"
serde_json = "1.0.140"
